--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          GITHUB_WORKSPACE: "/var/www/cms"
+          set-safe-directory: "/var/www/cms/src"
 
-      - name: Install dependencies
-        uses: php-actions/composer@v6
-        with:
-          command: composer install
+      - name: Make symlink
+        run: ln -s /var/www/cms/src/testlery-demo-cms/testlery-demo-cms /var/www/cms/current
+
+      # - name: Install dependencies
+      #   uses: php-actions/composer@v6
+      #   with:
+      #     command: composer install
       
 
       
