--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Make symlink
         run: ln -s /var/www/cms/src/testlery-demo-cms/testlery-demo-cms /var/www/cms/current
 
-      # - name: Install dependencies
-      #   uses: php-actions/composer@v6
-      #   with:
-      #     command: composer install
+      - name: Install dependencies
+        uses: php-actions/composer@v6
+        with:
+          command: cd current && composer install
       
 
       
