--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,19 +13,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Make symlink
-        run: |
-          ln -s /var/www/cms/src/testlery-demo-cms/testlery-demo-cms /var/www/cms/current
-          ln -s /var/www/cms/shared/.env /var/www/cms/current/
+      # - name: Make symlink
+      #   run: |
+      #     ln -s /var/www/cms/src/testlery-demo-cms/testlery-demo-cms /var/www/cms/current
+      #     ln -s /var/www/cms/shared/.env /var/www/cms/current/
 
-      - name: Install dependencies
-        run: cd /var/www/cms/src/current && composer install
+      # - name: Install dependencies
+      #   run: cd /var/www/cms/src/current && composer install
 
-      - name: Grant access permissions
-        run: |
-          sudo chown -R www-data.www-data /var/www/cms/current/storage
-          sudo chown -R www-data.www-data /var/www/cms/current/bootstrap/cache
-          chmod -R 775 /var/www/cms/current/storage
+      # - name: Grant access permissions
+      #   run: |
+      #     sudo chown -R www-data.www-data /var/www/cms/current/storage
+      #     sudo chown -R www-data.www-data /var/www/cms/current/bootstrap/cache
+      #     chmod -R 775 /var/www/cms/current/storage
 
-      - name: Config caching
-        run: cd /var/www/cms/src/current && php artisan config:cache
+      # - name: Config caching
+      #   run: cd /var/www/cms/src/current && php artisan config:cache
